Fixed issue #9 The issue caused the script to not work after a restart or shutdown, because it was called to early. All has been resolved by adding a start delay on the service, by using ExecStartPre=/usr/local/sleep 10. Don't know if add a little more delay for older system.

--- a/auto-rotate.service
+++ b/auto-rotate.service
@@ -11,6 +11,7 @@ BindsTo=graphical-session.target
 
 [Service]
 Environment=DISPLAY=:0
+ExecStartPre=/bin/sleep 10
 ExecStart=/usr/local/bin/auto-rotate
 Restart=on-failure
 SuccessExitStatus=3 4
